fix small spacing issues

--- a/components/form/body/Total.module.scss
+++ b/components/form/body/Total.module.scss
@@ -89,4 +89,9 @@
   justify-content: center;
   align-items: center;
   padding: 60px 0px;
+
+  p {
+    width: 80%;
+    text-align: center;
+  }
 }
